--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\""
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
+    "@supabase/supabase-js": "^2.86.2",
     "expo": "^54.0.23",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
